# clinical-env

./: Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  server.py
clinical_trial_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/: app.py
